--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,12 +8,20 @@
     <string name="standardNonACRooms"><font size="16"><b>Standard Room (Non-AC)</b></font>
         <font size="12">\n\n\n(Std-NAC)(Attached Washroom)</font></string>
 
-    <string name="alacarte"><font size="16"><b>Alacarte: Choice of Dishes</b></font>
-        <font size="12">\n\n\n\nINR: 50,000.00</font></string>
+    <string name="alacarte"><font size="16"><b>Alacarte\n\n</b></font>
+        <font size="12">\n(Choice Of Dishes)</font>
+        <font size="12">\n\n\nINR: 50,000.00</font></string>
     <string name="standardMessFourMeals"><font size="16"><b>Standard Mess Four Meals\n</b></font>
         <font size="12">\n(Breakfast, Lunch, Tea Snacks &amp; Dinner)</font>
         <font size="12">\nINR: 40,000.00</font></string>
     <string name="standardMessTwoMeals"><font size="16"><b>Standard Mess Two Meals\n</b></font>
         <font size="12">\n(Breakfast &amp; Dinner)</font>
         <font size="12">\n\n\nINR: 40,000.00</font></string>
+
+    <string name="combo"><b>Combo Menu</b>\n\n(North and South Mix)</string>
+
+    <string name="gym"><font size="16"><b>Gym\n</b></font>
+        <font size="12">\nINR: 4,000.00</font></string>
+    <string name="laundry"><font size="16"><b>Laundry\n</b></font>
+        <font size="12">\nINR: 5,000.00</font></string>
 </resources>
